// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PanelRemovalModal > renders application-context mode 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  />
  <div
    aria-hidden="true"
    class="fixed inset-0 z-40"
    data-aria-hidden="true"
    data-state="open"
    style="pointer-events: auto; background: rgba(0, 0, 0, 0.6); backdrop-filter: blur(4px);"
  />
  <div
    aria-describedby="radix-:r2:"
    aria-labelledby="radix-:r1:"
    class="fixed left-1/2 top-1/2 z-50 flex w-full -translate-x-1/2 -translate-y-1/2 flex-col"
    data-state="open"
    id="radix-:r0:"
    role="dialog"
    style="max-width: 480px; background: var(--bg-1); border: 1px solid var(--border-subtle); border-radius: var(--r-lg); box-shadow: var(--shadow-modal); max-height: 85vh; pointer-events: auto;"
    tabindex="-1"
  >
    <div
      class="shrink-0 flex items-center justify-between px-4 py-3"
      style="border-bottom: 1px solid var(--border-subtle);"
    >
      <h2
        class="text-sm font-semibold"
        id="radix-:r1:"
        style="color: var(--fg);"
      >
        Снять панель
      </h2>
      <p
        class="sr-only"
        id="radix-:r2:"
      >
        Закрытие заявки #42
      </p>
      <button
        aria-label="Закрыть"
        class="icon-btn"
        data-testid="modal-close"
        type="button"
      >
        <svg
          class="lucide lucide-x"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex-1 overflow-y-auto"
    >
      <div
        class="px-4 py-4"
      >
        <div
          class="space-y-3"
        >
          <div
            class="rounded-md border p-3 text-xs"
            style="border-color: var(--border-subtle); background: var(--bg-1); color: var(--fg-dim);"
          >
            Закрытие заявки #42
          </div>
          <div>
            <label
              class="mb-1.5 block text-2xs font-mono uppercase tracking-wider"
              style="color: var(--fg-mute);"
            >
              Комментарий
            </label>
            <textarea
              name="comment"
              rows="3"
              style="width: 100%; background: var(--bg-1); border: 1px solid var(--border); border-radius: var(--r-md); color: var(--fg); font-size: 12.5px; padding: 7px 10px; outline: none; resize: none;"
            />
          </div>
          <div>
            <label
              class="mb-1.5 block text-2xs font-mono uppercase tracking-wider"
              style="color: var(--fg-mute);"
            >
              Новое состояние панели 
              <span
                style="color: var(--err);"
              >
                *
              </span>
            </label>
            <select
              name="new_condition"
              style="width: 100%; background: var(--bg-1); border: 1px solid var(--border); border-radius: var(--r-md); color: var(--fg); font-size: 12.5px; padding: 7px 10px; outline: none; opacity: 1;"
            >
              <option
                value=""
              >
                Выберите состояние
              </option>
              <option
                value="work"
              >
                🟢
                 
                Рабочая
              </option>
              <option
                value="error"
              >
                ⚠️
                 
                Ошибка
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="shrink-0 flex justify-end gap-2 px-4 py-3"
        style="border-top: 1px solid var(--border-subtle);"
      >
        <button
          class="inline-flex items-center justify-center gap-1.5 font-medium rounded-md transition-colors cursor-pointer focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50"
          style="background: transparent; color: var(--fg-dim); border: medium; height: var(--h-btn-sm); padding: 0px 8px; font-size: 12px; border-radius: var(--r-md); font-family: var(--font-sans);"
        >
          Отмена
        </button>
        <button
          class="inline-flex items-center justify-center gap-1.5 font-medium rounded-md transition-colors cursor-pointer focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50"
          style="background: var(--accent); color: var(--accent-ink); border: medium; height: var(--h-btn-sm); padding: 0px 8px; font-size: 12px; border-radius: var(--r-md); font-family: var(--font-sans);"
        >
          Снять
        </button>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`PanelRemovalModal > renders manual mode with active-application warning 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  />
  <div
    aria-hidden="true"
    class="fixed inset-0 z-40"
    data-aria-hidden="true"
    data-state="open"
    style="pointer-events: auto; background: rgba(0, 0, 0, 0.6); backdrop-filter: blur(4px);"
  />
  <div
    aria-describedby="radix-:r5:"
    aria-labelledby="radix-:r4:"
    class="fixed left-1/2 top-1/2 z-50 flex w-full -translate-x-1/2 -translate-y-1/2 flex-col"
    data-state="open"
    id="radix-:r3:"
    role="dialog"
    style="max-width: 480px; background: var(--bg-1); border: 1px solid var(--border-subtle); border-radius: var(--r-lg); box-shadow: var(--shadow-modal); max-height: 85vh; pointer-events: auto;"
    tabindex="-1"
  >
    <div
      class="shrink-0 flex items-center justify-between px-4 py-3"
      style="border-bottom: 1px solid var(--border-subtle);"
    >
      <h2
        class="text-sm font-semibold"
        id="radix-:r4:"
        style="color: var(--fg);"
      >
        Снять панель
      </h2>
      <p
        class="sr-only"
        id="radix-:r5:"
      >
        Снятие панели P-002
      </p>
      <button
        aria-label="Закрыть"
        class="icon-btn"
        data-testid="modal-close"
        type="button"
      >
        <svg
          class="lucide lucide-x"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex-1 overflow-y-auto"
    >
      <div
        class="px-4 py-4"
      >
        <div
          class="space-y-3"
        >
          <div
            class="rounded-md border p-3 text-xs"
            style="border-color: var(--border-subtle); background: var(--bg-1); color: var(--fg-dim);"
          >
            Снятие панели P-002
          </div>
          <div
            class="rounded-md border p-3 text-xs"
            style="border-color: var(--warn); background: var(--warn-faint); color: var(--warn);"
          >
            Снятие без закрытия активной заявки № 
            77
          </div>
          <div>
            <label
              class="mb-1.5 block text-2xs font-mono uppercase tracking-wider"
              style="color: var(--fg-mute);"
            >
              Комментарий
            </label>
            <textarea
              name="comment"
              rows="3"
              style="width: 100%; background: var(--bg-1); border: 1px solid var(--border); border-radius: var(--r-md); color: var(--fg); font-size: 12.5px; padding: 7px 10px; outline: none; resize: none;"
            />
          </div>
          <label
            class="flex items-center gap-2 text-xs cursor-pointer"
            style="color: var(--fg-dim);"
          >
            <input
              name="keep_condition"
              type="checkbox"
            />
            <span>
              Оставить как есть
            </span>
          </label>
          <div>
            <label
              class="mb-1.5 block text-2xs font-mono uppercase tracking-wider"
              style="color: var(--fg-mute);"
            >
              Изменить состояние (по желанию)
            </label>
            <select
              disabled=""
              name="new_condition"
              style="width: 100%; background: var(--bg-1); border: 1px solid var(--border); border-radius: var(--r-md); color: var(--fg); font-size: 12.5px; padding: 7px 10px; outline: none; opacity: 0.6;"
            >
              <option
                value=""
              >
                Не менять
              </option>
              <option
                value="work"
              >
                🟢
                 
                Рабочая
              </option>
              <option
                value="error"
              >
                ⚠️
                 
                Ошибка
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="shrink-0 flex justify-end gap-2 px-4 py-3"
        style="border-top: 1px solid var(--border-subtle);"
      >
        <button
          class="inline-flex items-center justify-center gap-1.5 font-medium rounded-md transition-colors cursor-pointer focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50"
          style="background: transparent; color: var(--fg-dim); border: medium; height: var(--h-btn-sm); padding: 0px 8px; font-size: 12px; border-radius: var(--r-md); font-family: var(--font-sans);"
        >
          Отмена
        </button>
        <button
          class="inline-flex items-center justify-center gap-1.5 font-medium rounded-md transition-colors cursor-pointer focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50"
          style="background: var(--accent); color: var(--accent-ink); border: medium; height: var(--h-btn-sm); padding: 0px 8px; font-size: 12px; border-radius: var(--r-md); font-family: var(--font-sans);"
        >
          Снять
        </button>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;
